# archipelag-cli

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: api-coverage.md  architecture.md  contributing.md
src/: cli.rs  client.rs  commands.rs  config.rs  main.rs  models.rs  output.rs
